fixed playlist names and hid song search on mobile

--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -9,6 +9,11 @@ input {
   color:black;
 }
 
+html {
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
 body {
   color:white;
   background: linear-gradient(#c074b2,#8ab5e8) no-repeat center center fixed;
